2019-05-08  Alex Christensen  <achristensen@webkit.org>

        Don't crash when DOMNode.addEventListener:listener:useCapture: is called with a nil listener
        https://bugs.webkit.org/show_bug.cgi?id=197712
        <rdar://problem/50429770>

        Reviewed by Tim Horton.

        * DOM/ObjCEventListener.h:
        * DOM/ObjCEventListener.mm:
        (WebCore::ObjCEventListener::wrap):

2019-05-08  Daniel Bates  <dabates@apple.com>

        [Legacy WebKit] REGRESSION (r238078): Crash in hardwareKeyboardAvailabilityChangedCallback()
        https://bugs.webkit.org/show_bug.cgi?id=197724
        <rdar://problem/49725959>

        Reviewed by Tim Horton.

        Speculative fix for race condition. Between the time we receive a kGSEventHardwareKeyboardAvailabilityChangedNotification
        notification and when we schedule execution to run on the WebThread the WebView that notification
        was for may no longer exist. Take out a weak ptr on the WebView when we receive the notification
        and check that we still have it once we are running on the WebThread.

        * WebView/WebHTMLView.mm:
        (hardwareKeyboardAvailabilityChangedCallback):

2019-05-08  Timothy Hatcher  <timothy@apple.com>

        Add plumbing for inactive system colors in RenderTheme cache.
        https://bugs.webkit.org/show_bug.cgi?id=197699
        rdar://problem/49406936

        Reviewed by Tim Horton.

        * WebView/WebView.mm:
        (-[WebView _commonInitializationWithFrameName:groupName:]):
        (-[WebView _setUseDarkAppearance:]):
        (-[WebView _useInactiveAppearance]):
        (-[WebView _setUseInactiveAppearance:]):
        (-[WebView _setUseDarkAppearance:useInactiveAppearance:]):
        (-[WebView _effectiveAppearanceIsInactive]):
        (-[WebView viewDidChangeEffectiveAppearance]):
        * WebView/WebViewPrivate.h:

2019-05-03  Daniel Bates  <dabates@apple.com>

        Pass KeyboardEvent by reference in more places