@@ -1,3 +1,13 @@
+2019-05-13  Jer Noble  <jer.noble@apple.com>
+
+        Make QTKit an optional framework
+        https://bugs.webkit.org/show_bug.cgi?id=197075
+
+        Reviewed by Eric Carlson.
+
+        * WebView/WebVideoFullscreenHUDWindowController.mm:
+        (-[WebVideoFullscreenHUDWindowController windowDidLoad]):
+
 2019-05-08  Alex Christensen  <achristensen@webkit.org>
 
         Don't crash when DOMNode.addEventListener:listener:useCapture: is called with a nil listener
